--- a/Reports/Initial/Initial Report.tex
+++ b/Reports/Initial/Initial Report.tex
@@ -32,7 +32,7 @@ Our aims were grouped into various categories with each category signifying the 
 \item The system must adopt the cellular automaton model.
 \item The system must accommodate entry and exit of new vehicles to give a sense of realism.
 \item The system must allow vehicles to move and turn freely.
-\item The system must have at least a fixed map.
+\item The system must have at least one fixed map.
 \item Traffic light functions must be clearly shown.
 \item GUI must show basic animations of cars moving on roads.
 \end{enumerate}
@@ -40,52 +40,52 @@ Our aims were grouped into various categories with each category signifying the 
 \subsection{Should} \label{sub:should}
 \begin{enumerate}[itemsep = -1ex]
 \item User can create their own maps (with roads, intersections) and save them to disk.
-\item GUI should have sliders to allow the user change the number of cars in the simulation, and the simulation speed.
+\item GUI should have sliders to allow the user change the number of cars in the simulation and the simulation speed.
 \item GUI should show cars turning along an arc.
 \item User should be able to enable/disable several traffic rules to see effects on simulation.
 \item User should be able to import pre-made maps and user-made maps.
 \end{enumerate}
 
-\subsection{Would Like/ Future Features } \label{sub:would}
+\subsection{Would Like / Future Features } \label{sub:would}
 \begin{enumerate}[itemsep = -1ex]
 \item Curved roads.
 \item Various statistics of car movements (time spent at traffic light, e.t.c).
-\item Importing and parsing maps from OpenStreetMap on which to simulate.
+\item Importing and parsing maps from OpenStreetMap, or similar sources, on which to simulate.
 \end{enumerate}
 
-\section{Strategy/ Rough Timetable}\label{dev:meth}
+\section{Strategy/Rough Timetable}\label{dev:meth}
 \paragraph{}
-We looked into some traffic flow models (microscopic, macroscopic, mesoscophic, etc.). However, we found the cellular automaton model was more in line with what we intend to achieve with our software. i.e a sense of realism where every vehicle decides what to do for itself. That is to say, each car occupies a cell in a lane, moving forward only when the cell in front of it is empty.
+We looked into some traffic flow models (microscopic, macroscopic, mesoscophic, etc.). However, we found the cellular automaton model was more in line with what we intend to achieve with our software, i.e. a sense of realism where every vehicle decides what to do for itself. That is to say, each car occupies a cell in a lane, moving forward only when the cell in front of it is empty.
 \paragraph{}
-Our team preferred the agile development approach due to the short time frames for product delivery. The idea is to have repeated iterations, or cycles, each with some additional, core features. This is to ensure that the features we want developed get completed before moving on to the next iteration.
+Our team preferred the agile development approach due to the short time frames for product delivery. The idea is to have repeated iterations, or cycles, each with some additional core features implemented. This is to ensure that the features we want developed get completed before moving on to the next iteration.
 \paragraph{}
 \begin{wraptable}{r}{6cm}
 \centering
-    \begin{tabular}{|c|c|}
-	\hline
-	\textbf{Iteration} & \textbf{Date}  \\ \hline
-	Iteration 1 & 10/02/16 - 20/02/16 \\ \hline
-	Iteration 2 & 21/02/16 - 02/03/16 \\ \hline
-	Iteration 3 & 03/03/16 - 13/03/16 \\ \hline
-	Iteration 4 & 14/03/16 - 24/03/16 \\ \hline
+ \begin{tabular}{|c|c|}
+  \hline
+  \textbf{Iteration} & \textbf{Date}  \\ \hline
+  Iteration 1 & 10/02/16 - 20/02/16 \\ \hline
+  Iteration 2 & 21/02/16 - 02/03/16 \\ \hline
+  Iteration 3 & 03/03/16 - 13/03/16 \\ \hline
+  Iteration 4 & 14/03/16 - 24/03/16 \\ \hline
  \end{tabular}
 \caption{Iteration Cycles}
 \label{tab:iterations}
 \end{wraptable}
-Our plan consists of four iterations, each with their own due date and features we should have functioning and tested at the end of the iteration. However, this is a rough plan and it can change (albeit, not significantly). Each iteration will last eleven days. The iterations will follow this timetable, spanning the following dates, as shown in Table~\ref{tab:iterations}.
+Our plan consists of four iterations, each with their own due date and features we should have functioning and tested at the end of the iteration. Each iteration will last eleven days. The iterations will follow this timetable, spanning the following dates, as shown in Table~\ref{tab:iterations}.
 
 \section{Progress}\label{prog}
 \paragraph{}
 Up to this point, our time has been accounted for as follows, each starting at the dates shown in Table~\ref{tab:progress}.
 \begin{table}[!htbp]
 \centering
-\begin{tabular}{|c|c|}
-	\hline
-	\textbf{Date} & \textbf{Activity}  \\ \hline
-	21/01/16 & Team formation, research and brainstorming \\ \hline
-	29/01/16 & Research \\ \hline
-	01/02/16 & Refined development plan and documentation \\ \hline
-\end{tabular}
+ \begin{tabular}{|c|c|}
+  \hline
+  \textbf{Date} & \textbf{Activity}  \\ \hline
+  21/01/16 & Team formation, research and brainstorming \\ \hline
+  29/01/16 & Research \\ \hline
+  01/02/16 & Refined development plan and documentation \\ \hline
+ \end{tabular}
 \caption{Progress}
 \label{tab:progress}
 \end{table}
@@ -96,34 +96,34 @@ Although research has taken a while, it is important that we understand the doma
 \paragraph{}
 A correct architecture is important to fulfil the needs of the project and to have it as scalable as possible to meet future requirements. Our main back-end development language is Java and the front-end will be implemented using JavaFX. We will adhere to the MVC (Model-View-Controller) architecture pattern.
 \paragraph{}
-We will be considering the following classes as the basis of our architecture: Simulation (hold the main simulation), Ticker (tracks internal system time), Map (holds layout for whole simulation model), Road (contains one or more lanes with a shape), Lane (part of the road which holds vehicles), Intersection (connecting two or more roads),TrafficLight (lives inside Intersection, controls traffic flow) Vehicle (interface for moving objects for scalability), Car (implements Vehicle, moves inside Lanes).
+We will be considering the following classes as the basis of our architecture: Simulation (hold the main simulation), Ticker (tracks internal system time), Map (holds layout for whole simulation model), Road (contains one or more lanes with a shape), Lane (part of the road which holds vehicles), Intersection (connecting two or more roads), TrafficLight (lives inside Intersection, controls traffic flow), Vehicle (interface for moving objects for scalability), Car (implements Vehicle, moves inside Lanes).
 
 \part*{Project Orginisation}
 \section{Group Organisation}\label{proj:org}
 \paragraph{}
-To most effectively work as a team, cooperation, equality, responsibility, and self-organisation are our working policies. We have flexible roles so that every member can make contributions in every part of the project. We have scheduled group meetings for each iteration and use online tools for remote discussion and collaboration.
+To most effectively work as a team, cooperation, equality, responsibility, and self-organisation are our working policies. We have flexible roles so that every member can make contributions in each part of the project. We have scheduled group meetings for each iteration and use online tools for remote discussion and collaboration.
 
 \subsection{Flexible Roles}\label{roles}
 \paragraph{}
-There are three main roles: researcher, developer (functional developer, GUI developer), documentation analyst. All of us will participate in the design and development of the system. Everyone will document the specific section they are working on using JavaDoc style comments.
+There are three main roles: researcher, developer (functional developer, GUI developer), and documentation analyst. All of us will participate in the design and development of the system. Everyone will document the specific section they are working on using JavaDoc style comments.
 
 \subsection{Group Meetings}\label{gm}
 \paragraph{}
-As the developing process has been divided into different iterations, for each iteration, we will have two group meetings, one for clarifying each other's job for this iteration and another meeting before the deadline of the iteration to summarize our work.
+As the development process has been divided into different iterations, for each iteration, we will have two group meetings: one for clarifying each other's tasks for this iteration and another meeting before the deadline of the iteration to summarize our work.
 
 \subsection{Communication Tools}\label{comm:tools}
 \paragraph{}
-We use WhatsApp for general communication, like coordinating meeting times. We will use Slack for project discussion, like discussing new ideas/probems and sharing documents. We will use Mingle, a professional project management tool, to define our objectives, track a plan's progress, and assign group members and priorities to tasks. And finally, we will use Google Docs for live, remote collaboration on documents.
+We use WhatsApp for general communication, like coordinating meeting times. We use Slack for project discussion, like discussing new ideas/problems and sharing documents. We will use Mingle, a professional project management tool, to define our objectives, track a plan's progress, and assign group members and priorities to tasks. And finally, we will use Google Docs for live, remote collaboration on documents.
 \subsection{Development Tools}\label{dev:tools}
 \paragraph{}
-Eclipse and IntelliJ are our main platforms for coding. For documentation, we will use JavaDoc generation and LaTex. Finally, GitHub is used as our main source-code repository.
+Eclipse and IntelliJ are our main platforms for coding. For documentation, we will use JavaDoc generation and LaTeX. Finally, GitHub is used as our main source-code repository.
 
 \section{Teamwork}\label{team}
 \paragraph{}
 Because of the nature of the project, we decided to distribute peer assessment equally. Each member in the group has the same job in terms of amount, difficulty, and time. Only in situations of extreme refusal of collaboration, we will reassess peer assessment distribution.
 \paragraph{}
-People have different opinions and perceptions so conflict may occur in the team. Our team members have agreed to put the team first, then our opinions. We will deal with conflicts in a timely matter to avoid having the problem escalate. Conflict is acually a sign of healthy and effective team work by telling us that our team members are trying their best and they have different experience and skills which could contribute to an effective project.
+People have different opinions and perceptions so conflict may occur in the team. Our team members have agreed to put the team first, then our opinions. We will deal with conflicts in a timely matter to avoid having the problem escalate. Conflict is a sign of healthy and effective teamwork by telling us that our team members are trying their best and they have different experience and skills which could contribute to an effective project.
 \paragraph{}
-There are many ways in which we have discussed to resolve conflict, from private talking to group meetings. In some situations, private talking to the group member is sufficient to solve the problem. We agreed to use private message on Slack or WhatsApp. However, the group can meet to discuss any issue. In case two or more group members are undecided on an issue, we agreed to take a group vote. If group member does not pull their weight, we should talk to them privately and describe the situation.
+There are many ways in which we have discussed to resolve conflict, from private talking to group meetings. In some situations, private talking to the group member is sufficient to solve the problem. We agreed to use private messaging on Slack or WhatsApp. However, the group can meet to discuss any issue. In case two or more group members are undecided on an issue, we agreed to take a group vote. If group member does not pull their weight, we should talk to them privately and describe the situation.
 
 \end{document}
