--- a/Reports/Final/team_londonsw.tex
+++ b/Reports/Final/team_londonsw.tex
@@ -169,6 +169,14 @@ A road is defined as a container for one or more lanes with a start point and an
 A lane is part of a road where the vehicles actually move. A lane's length is defined by the road it is part of. The number of cells that vehicles can be in is equal to the length of the lane. Vehicles enter the lanes at the start position and exit through the end position. Lanes are like queues that follow the cellular automata model, i.e. it is first-in-first-out and vehicles can only move forwards if the cell in front of them is empty. 
 \paragraph{}
 Lanes have a moving direction associated with them by the MapDirection enumeration, which consists of values NORTH, SOUTH, EAST, and WEST. We set this explicitly because if a lane has a length of 1, its start and end locations are the same, therefore making it impossible to determine which way traffic would need to flow. When adding lanes to a road, the lanes travelling north must be added before the ones travelling south and the lanes travelling east must be added before the ones travelling west to maintain the left-hand style of driving.
+\paragraph{}
+To create a lane we must consider 4 aspects regarding the cardinality:
+\begin{itemize}
+\item If the map direction is North, then the lane\textsc{\char13}s start point is the road\textsc{\char13}s start point and the lane\textsc{\char13}s end point is the road\textsc{\char13}s end point.
+\item If the map direction is South, then the lane\textsc{\char13}s start point is the road\textsc{\char13}s end point and the lane\textsc{\char13}s end point is the road\textsc{\char13}s start point.
+\item If the map direction is East,  then the lane\textsc{\char13}s start point is the road\textsc{\char13}s start point and the lane\textsc{\char13}s end point is the road\textsc{\char13}s end point.
+\item If the map direction is West,  then the lane\textsc{\char13}s start point is the road\textsc{\char13}s end point and the lane\textsc{\char13}s end point is the road\textsc{\char13}s start point.
+\end{itemize}
 
 \section{Traffic Lights}\label{trafficlights}
 \subsection{Basic Structure}
@@ -262,17 +270,43 @@ This tells the observable/publisher to subscribe the subscriber "sub" (a vehicle
 \subsubsection{Evaluation}
 \paragraph{}
 This approach works very well with the JavaFX thread because of explicitly specifying ".observeOn(JavaFxScheduler.getInstance())", thanks to RxJavaFx. It is simple to add more subscribers and have them perform some operation, thanks to RxJava. There are only a few downsides with this approach. First, the ticker speed must be set before the simulation begins. Once there is a subscriber, the ticker speed cannot change. For this reason, we request the user sets the ticker speed before beginning the simulation. It is possible in theory, but due to time constraints, we left it as-is. This, in turn, requires calling Ticker.start() once the ticker speed is set to initialize the observable in-charge of ticking. Second, whatever class that wants to subscribe to the ticker must extend the Subscriber$<$Long$>$ class. Therefore, this would be the only class that the subscriber would be able to extend, as Java does not support multiple inheritance.
-
+\paragraph{}
 Also made by ReactiveX, this is a library that allows an asynchronous reactive approach to JavaFX-specific events. It is useful for GUI event processing. Although we decided to use this in our Ticker implementation, we are using a very small amount of its functionality. The only aspect of this library that we are using is specifying that the publisher/observable should run on the JavaFX application thread.
 
 \section{Vehicles}
 
 \section{Log}
 
+\section{Testing the System}
+
+
 \part{The Application}
 \section{Start-Up}
 
 \section{Simulation Screen}
+\paragraph{}
+Aimed at making a user-oriented simulation system, we decided to have a main simulation screen where users can both monitor the simulation process and control the simulation system including start or reset simulation, set vehicle number, set ticker interval, disable or enable traffic light, etc.
+\subsection{Overall Screen Structure}
+\subsubsection{JavaFX Scene Builder}
+\paragraph{}
+Concerned that JavaFX Scene Builder is a visual layout tool that lets users to quickly design JavaFX application user interfaces, without coding but can just drag and drop UI component to a work area, modify their properties, apply style sheets, and the FXML code which is automatically generated in the background can be combined with a Java project by binding the UI to the application's logic to handle the events and actions taken on each element, we chose JavaFX Scene Builder as our main user interfaces development tool at first.
+\paragraph{}
+Problems arose after we finished building FXML file and  tried to connect the UI interface with simulation models. We found only one controller can be used in a FXML file which means we need to figure out how to communicate between different controllers. This problem first arose when we loaded pre-made map into the simulation. 
+\paragraph{}
+Users need to choose a pre-made map before going into simulation screen this will need an intermediate controller to deliver map name between two interfaces. There will be lots of this kind of communication so that lots of intermediate controllers need to be added which will increase complexity potentially. Thinking about this, we finally gave up JavaFX Scene Builder, decided to using pure JavaFX.
+
+\subsubsection{Simulation Screen}
+\paragraph{}
+The simulation screen Interface was built using Model-View-Controller (MVC) architecture pattern. SimulationController.java is a the controller to draw the screen and generate the log for the simulation. SimulationScreen.java is the corresponding model used to manage UI components of the interface. 
+\paragraph{}
+We used the built-in layout container classes, called panes that are available with the JavaFX SDK to manage UI components of simulation screen. The JavaFX SDK provides several layout panes for the easy setup and management of classic layouts such as rows, columns, stacks, titles, and others. As a window is resized, the layout pane automatically repositions and resizes the nodes that it contains according to the properties of the nodes. We used BorderPane layout pane for the simulation screen. The BorderPane layout pane provides five regions in which to place nodes: top, bottom, left, right and center. 
+\paragraph{}
+To keep the interface simple and clear, only three parts were used in our simulation screen: top, center and right. Title of the simulation screen "LondonSW Simulation System" was set on the top of the BorderPane . We used the center part to load the chosen pre-made map in which simulation process will happen. The right part was mainly used to monitor and control the simulation process. Here we used the VBox layout pane to make sure nodes are arranged in a single column. 
+\paragraph{}
+Labels including "Number of Cars", "Ticker interval", Traffic Light Duration", "Time Ticked", "Vehicle Time Spent Standing" were set for simulation monitor to help users have a better understand about how is the simulation process going. 
+\paragraph{}
+"Start" and "Reset" buttons are used to control whether to start or stop the simulation process. Users can click "Add Ambulance" to add an ambulance whose behavior is aggressive and can also delete it since once an ambulance is added the button will be "Delete Ambulance". There is a "Set Traffic Light duration" button. Once it is clicked, there will be a dialog allows users to set traffic interval(100-1000 millisecond) by a spinner. "Disable Traffic Light" is used to delete all traffic lights of the map and "Enable Traffic Light" to restore all traffic lights to the map. This is to simulate situation in which traffic lights cannot work properly. We used a slider to control number of cars in the system. Users can set number of cars they want as long as  it is in the available range. The minimum car number is 1, and the maximum number is set automatically depends on the overall number of slots of all lanes in the map ($MaxCarNumber=0.6*SlotsNumber$). This means the simulation process won't crash due to too many cars results in no slot is available and to make sure the traffic can be coordinated properly.
+
 \subsection{Map Graphics}
 \paragraph{}
 For the map creation we are using a suite of Panes which are included in the JavaFX Software Platform. We use stacked panes which allow us to treat different panes like layers and that grants us major management. The whole grid layout consists on a GridPane which is a flexible grid of rows and columns that holds in each row and column a specific pane. Each pane is a box which can either be grass (empty square), a Road, or an Intersection. All are drawings are of our own authorship because we have used the tool GIMP, an open source graphic editor. The size of each stack pane is dynamic and we are able to change it by changing a resize factor, which is an important attribute used in many of our drawings. 
@@ -291,17 +325,40 @@ The intersection is drawn with the same background as a Road but in addition it 
 \subsubsection{TrafficLightDecorator}
 \paragraph{}
 The traffic lights are also drawn programatically using its decorator class. For information about drawing traffic lights, please refer to section \ref{trafficlights} on page \pageref{trafficlights}.
-
-\subsection{Vehicle Graphics}
+\subsubsection{VehicleGUIDecorator}
 Vehicle movement is displayed by using the VehicleGUIDecorator class. 
 Each vehicle will have exactly one VehicleGUIDecorator associated with it. We have defined different states of the vehicle so we can track their movements and make them move properly:
 \begin{itemize}\itemsep1pt \parskip0pt \parsep0pt
-\item State 0 is when a vehicle isn\textsc{\char13}t moving
+\item State 0 is when a vehicle is not moving
 \item State 1 means that the vehicle is moving straight.
 \item State 2 means that the vehicle has entered an intersection
 \item State 3 is a state where the vehicle has been deleted or has exited the simulation.
 \end{itemize} 
-\subsection{Overall Structure}
+
+\subsection{Evolution of Vehicle Drawing and Animation}
+\paragraph{}
+Our vehicle movement evolved over the course of the project, with many improvements made along the way. 
+\subsubsection{First Implementation}
+\paragraph{}
+After the map's grid was able to be drawn dynamically, the vehicle now had to move on top of the lanes. It was challenging at first because the obvious way of having the vehicle move between grid cells is not possible. The first step towards our solution was having a rectangle representing the vehicle fill the whole grid cell, regardless of whether it is moving vertically or horizontally. The location of where the rectangle should go was determined by a formula, which took its original placement in the map. The coordinate x- and y-positions of the vehicle are multiplied by the image dimension and the resize factor. The actual movement of the vehicle was dependent on the map direction it is coming from and the map direction it is going to. So if a vehicle is moving east, then north, that means it is turning left and a left turn animation was required. A JavaFX TranslateTransition is used to move the vehicle.
+\paragraph{}
+However, turning the vehicle was quite complex. In the first implementation, a vehicle would simply shift into its new location, so a different edge of the vehicle would now be moving forwards. That did not lend itself to a realistic simulation. Additionaly, because of all the different kinds of cases of movement, like east to north, west to south, et cetera, had a lot of duplicated code with only a few values changed in each. Furthermore, the nature of the animation was shifting it by some x and y values relative to where the vehicle currently is. This made the animation imprecise and over time, vehicles would shift out of their lanes and start moving on grass or on top of other improper lanes. As a consequence, this kind of animation did not work with any ticker speed. If the ticker was made faster, the animation would become more imprecise, with vehicles not reaching the cells they should have in time. This approach worked well in a very limited amount of cases and needed to be reworked to work with a variety of ticker speeds and many vehicles. This brought us to our second implementation of vehicle movement.
+
+\subsubsection{Second Implementation (Current)}
+\paragraph{}
+Because of all the issues with the first vehicle movement, namely vehicles shifting out of place and not working with various ticker speeds, we re-worked the animation to a much simpler process. The process is:
+\begin{enumerate}\itemsep1pt \parskip0pt \parsep0pt
+\item Get the current coordinate location of the vehicle
+\item Calculate the new coordinate location for the vehicle
+\item Calculate the required vehicle rotation based on where it is moving from and to
+\item Determine the actual pixel locations for the new location
+\item Set the movement translation to an exact location
+\item Move and rotate the vehicle
+\end{enumerate}
+There are helper methods to calculate some of the steps. The method "directionToTranslation(MapDirection d)" takes a MapDirection and translates it into a coordinate representing a movement in that direction. For example, passing in a parameter of EAST returns a Coordinate with the value of (1,0), which represents moving once in the positive x-direction and staying constant in the y-direction. The method "getRotationFromDirectionChange(...)" takes the direction the vehicle is moving from and to as parameters and returns the angle which the vehicle must turn by. Most importantly, the method "coordinateToPixels(Coordinate c, MapDirection d)" takes a location in the map and a direction as parameters and returns the exact location to where the vehicle must move to. It is also used to determine the initial location of the vehicle. The MapDirection parameter makes sure that the vehicle gets drawn in the correct lane.
+
+\paragraph{}
+There are many advantages to this second implementation. First, there was a drastic reduction in code duplication. The process was converted to a set of simple steps, like a recipe, which works in any situation. In addition, because of each coordinate having a distinct location, the vehicle knows exactly where to move to. This makes it work flawlessly with any ticker speed. Finally, the vehicle does not shift out of its proper lane over time. 
 
 \section{Map Maker Mode}
 \subsection{Map Making Basics}
@@ -314,20 +371,50 @@ The empty map is represented by the Map class, which contains the MapGrid of no 
 \paragraph{Placement of Map Components}
 When the user selects a component from the right of the screen and clicks on a location in the map, an instance of that component is actually created in the map. For instance, when placing an intersection in the map, an Intersection object gets created and placed in that space. It is set with no roads attached and no traffic lights. When placing a bit of road, either North-South or East-West, an instance of the Road class is created every time. The Road instance's start and end coordinate locations are the same, so a road of length 1 is created. Two lanes are added, with each going in opposite directions.
 \paragraph{Keeping Focus}
-At first, building maps was a very annoying task. The user would have to click on the map component on the right, then click on the empty grid square, then go back to click on the map component again, followed by an empty grid square, and so on. This was solved by tracking of what on the screen gets focus and what held the focus previously. Focus means what was last clicked or selected  by the user, that is, the mouse cursor was "focused" on a specific element on the screen. The focus is represented by a Java enum, with entries like ROADNS (for a road that travels vertically) and INTERSECTION. When this mode starts up, the current focus is set to nothing, and the previous is null. The values are stored in the MapMakerController. As an example, if the user first clicks on the Intersection component image, that image gains focus. A blue glow surrounds the image to represent that it has focus. If the user then clicks on an empty map grid square, that map grid square gains focus and the previous focused gets set to Intersection. The map grid checks was was previously focused. It will see that Intersection ws previously focused, and place the component in the clicked map grid square. However, to make it easier on the user, focus is then placed back on the Intersection component image so they can keep clicking intersections into the map. The same applies for all other component images. 
+At first, building maps was a very annoying task. The user would have to click on the map component on the right, then click on the empty grid square, then go back to click on the map component again, followed by an empty grid square, and so on. This was solved by tracking of what on the screen gets focus and what held the focus previously. Focus means what was last clicked or selected  by the user, that is, the mouse cursor was "focused" on a specific element on the screen. The focus is represented by a Java enum, with entries like ROADNS (for a road that travels vertically) and INTERSECTION. 
+\paragraph{}
+When this mode starts up, the current focus is set to nothing, and the previous is null. The values are stored in the MapMakerController. As an example, if the user first clicks on the Intersection component image, that image gains focus. A blue glow surrounds the image to represent that it has focus. If the user then clicks on an empty map grid square, that map grid square gains focus and the previous focused gets set to Intersection. The map grid checks was was previously focused. It will see that Intersection ws previously focused, and place the component in the clicked map grid square. However, to make it easier on the user, focus is then placed back on the Intersection component image so they can keep clicking intersections into the map. The same applies for all other component images. 
 \paragraph{Saving the Map}
 When the user decides to save the map, they first get prompted for a file name. The file name cannot be empty, and this is enforced by disabling the "OK" button in the Save dialog while the name text field is empty. When the user hits the "OK" button, the saving process begins. Because of the way the map components were placed into the map, all the roads are separate and disconnected and all intersections are not connected to any roads. In other words, if there is a road of length 5 moving vertically, there are actually 5 separate roads moving vertically. We need to "glue" together all the bits of roads, connect those roads to the relevant intersections, and add all traffic lights. 
-
+\paragraph{}
 There is a method in the MapMakerScreen class called "buildAndSaveMap(Map m)" that takes the map "m" that the user built. Using that map's width and height, the method creates a new empty map that will serve as the "glued together" and final verison of the user built map. We traverse the broken map, and when we discover a component, we process it. Discovering an intersection is the simplest case. We remove the intersection from the old map and place a new intersection into the old map at the same location. For bits of Road instances, it is trickier. If we discover a bit of road that is moving horizontally (east-west), we then have a while loop moving down the map row to see how long the road is. This way we determine the start location of this road (the original found piece) and the end location of this road (the last bit of road discovered moving horizontally that was not null). We create a new road, add 2 lanes, remove all the bits of road from the old map (so they do not get added again to the fixed map), and add the new road to the new map. A similar process is done for roads moving vertically. Each time a new stretch of road bits is discovered in the old map, this process is followed to "glue" all road sections together.
-
+\paragraph{}
 Now that we added all Roads and Intersections to the new map, we must connect the "edges" and "nodes" of our map, i.e. our roads and intersections. There is a method called "assignRoadsToIntersections(Map m)" that takes the fixed map that we just built as a parameter. We retrieve the list of all intersections from the map, and determine the surrounding coordinates for that intersection. If there is a road component in any of the coordinates, the intersection gets assigned that road. For example, if there is a Road component at the location one coordinate north of the intersection, that road gets assigned as the north road of that intersection. This is done for all intersections. Now that all roads are glued and all intersections have been assigned roads, the map can now finally be saved to disk.
-
+\paragraph{}
 We are using Java serialization to save the map. First, we check if the maps directory exists. The maps directory is set to the current working location from where the system was invoked. If it does not exist, it is created. Using the file name that the user provided in the Save dialog, we save it into the maps directory. Once this is complete, the user gets taken to the previous screen in the system, the choose mode screen. Now they can choose to open their newly built map or build a new one.
 \paragraph{Map Validation and Robustness}
 When saving the map, there is no map validation. We do not check whether all roads connect to some intersection and that no intersections are floating alone with no roads. Therefore, the user is able to build any meaningless or broken maps. However, this is completely fine. The simulation is robust against these kinds of map designs by having the vehicles behave in appropriate ways. For instance, if there is a road without an intersection at the end of it, the vehicle simply leaves the simulation. If there is a road connected to an intersection, but no other roads to go to, the vehicle simply stays in place once it reaches the intersection because it has nowhere else to go. So overall, no matter how poorly built the map is, the vehicles will act accordingly and there will be no system crashes.
 
 \subsection{Evaluation}
 Although the map building process was optimized by keeping focus and quick map component placement, there are a few areas where the process could have been improved. Some sort of click-and-drag functionality would make it easier to place a lot of components in big maps. Some of the non-GUI functionality, like saving the map or helper methods like getting a Node at some coordinate, could have been moved to the controller to keep GUI and logical methods separate. When saving the map, we should have probably checked if each newly discovered adjacent bit of road is moving in the same direction as the first piece of discovered road. Some map validation would be nice to have, regardless of how robust the system is. Finally, a dialog saying where the map was saved to would be useful so the user would know exactly where to look when trying to load their map for the simulation screen.
+
+\part{Teamwork}
+\section{Communication}
+\paragraph{}
+We use WhatsApp for general communication, like coordinating meeting times. We use Slack for project discussion, like discussing new ideas/problems and sharing documents. We have general discussion for all group members and private communication between two members to talked about issues like program interfaces without bothering others.
+
+\section{Group meetings}
+\paragraph{}
+We have scheduled group meetings twice a week, mostly on Monday and Friday. We discussed task progress and assign new tasks normally on Monday. On Friday, there would be a long-duration meeting. we would talk about the project in detail and members would code together.
+\section{Agile development with Mingle}
+\paragraph{}
+Because of the nature of the project, continuous learning and adaptation to the emergent state of the project are unavoidable. We use Mingle for project management which is based on Agile software development principles. It is designed to integrate with a team's current workflow. We used Mingle's Planner feature to define objectives for each team members, track a plan's progress, and receive alerts when a plan changes. Mingle helps our team communicate and collaborate easily and effectively solve problems by having more efficient conversations with team members.
+\paragraph{}
+At the task level, Mingle allows us to assign teammates to a specific action, so everyone can see who is working on what. At each end of our group meeting we will assign tasks to group members by adding a new story at Mingle planner including a specific task description, an estimate duration, status (new, in progress, complete), a task priority (must, should could), the owner of the task. 
+\paragraph{}
+At the project level, we use Mingle to nudge teams to have a conversation if an upcoming deadline has not been met. Before each group meeting we will talked about task completion status to have a better grasp about how is the progress going.
+\paragraph{}
+At the program level, Mingle sends us alerts so that everyone can follow up. we also exported the task file and uploaded to Github to make it available and more convenient  for everyone to check their tasks at any time.
+ 
+\subsection{Github}
+\paragraph{}
+IntelliJ is our main platform for coding. We use Github as our main source-code repository. We have a master branch and four personal branches. Everyone is free to experiment and commit changes. Anything in the master branch is always deployable. Branch won't be merged until it's ready to be reviewed by master. Once we have done our tasks we may make a commit so that others can follow to understand after pulling. We would add an associated commit message, which is a description explaining why a particular change was made to make it clear for others what we have done. Master branch would close a merge and we could also rolled  back changes if a bug found since each commit is considered a separate unit of change.
+
+\part{General Project Evaluation}
+
+\part{Peer Assessment}
+\paragraph{}
+We have decided to distribute the points as follows:
 
 
 \newpage
